Fixed sponsor logo spacing on session pages

--- a/web/themes/custom/badcamp2017/sass/components/_sponsors.scss
+++ b/web/themes/custom/badcamp2017/sass/components/_sponsors.scss
@@ -61,3 +61,6 @@
   font-size: 1.5rem;
 }
 
+.sponsor-logos {
+  margin: 2rem 0;
+}
